--- a/razas.html
+++ b/razas.html
@@ -45,6 +45,24 @@
       transition: background 0.3s ease, transform 0.2s ease;
     }
 
+    #divBtnTop button{
+      background: rgba(0, 0, 0, 0.2);
+      border: solid 1px whitesmoke;
+      color: #fff;
+      margin: 0;
+      padding: 0;
+      border-radius: 0px;
+      height:7.5rem;
+      width:7.5rem;
+
+    }
+
+    #divBtnTop button:hover{
+      background: rgba(45, 45, 45, 0.2);
+
+    }
+
+
     .filter-button:hover {
       background: linear-gradient(135deg);
       transform: translateY(-2px);
@@ -287,7 +305,6 @@
 
     .title-container {
       text-align: center;
-      margin-bottom: 3rem;
     }
 
     @keyframes neonFlicker {
@@ -356,8 +373,8 @@
     </div>
   </div>
 
-  <div id="div">
-    <button class="">Warning</button>
+  <div id="divBtnTop">
+    <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?tab=t.0"><button class="">DOCUMENTO</button></a>
     <button class="" onclick="mostrarFormulario()">GENERAR RAZA</button>
   </div>
 
