--- a/razas.html
+++ b/razas.html
@@ -373,10 +373,10 @@
     </div>
   </div>
 
-  <div id="divBtnTop">
+  <!-- <div id="divBtnTop">
     <a href="https://docs.google.com/document/d/1Dlcji8oR8gjisp-Uua9jirKSnK_iLwy97cX9NxeJq94/edit?tab=t.0"><button class="">DOCUMENTO</button></a>
     <button class="" onclick="mostrarFormulario()">GENERAR RAZA</button>
-  </div>
+  </div> -->
 
   <div id="overlay" onclick="cerrarFormulario()">
     <div id="form-container" onclick="event.stopPropagation()">
