--- a/razas.html
+++ b/razas.html
@@ -635,9 +635,9 @@
     const attributeColors = {
       Fuerza: '#ff7675',
       Destreza: '#55efc4',
-      Constitucion: '#ffeaa7',
+      Constitución: '#ffeaa7',
       Inteligencia: '#74b9ff',
-      Sabiduria: '#a29bfe',
+      Sabiduría: '#a29bfe',
       Carisma: '#fd79a8'
     };
 
